--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@ crossorigin="anonymous"></script>
 
     <main>
       <div class="row">
+        <div class="col s0 l1"></div>
+        <div class="col s12 l10">
       
-        <div class="col s12 m4">
+        <div class="col s12 l4">
 
           <div class="card animated bounce">
             <a href="http://blog.karaage.tokyo/post/2017-05-24-hellohugo/">
@@ -71,6 +73,8 @@ crossorigin="anonymous"></script>
           </div>
         </div>
       
+    </div>
+      <div class="col s0 l1"></div>
     </div>
     </main>
         <ul class="pagination center">
