--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ crossorigin="anonymous"></script>
             <a href="http://blog.karaage.tokyo/post/2017-05-27-hugo-template/">
               <div class="card-image">
                 <img style="opacity: 0.5 ;" src="/img/hugo.png">
-                <span class="card-title grey-text">Helloのテンプレートの話</span>
+                <span class="card-title grey-text">hugoのテンプレートの話</span>
                 <div class="meta grey-text"> 2017月05月27日</div>
               </div>
             </a>
