--- a/404.html
+++ b/404.html
@@ -69,11 +69,11 @@ crossorigin="anonymous"></script>
           <p class="no-content">お探しのページは見つかりませんでした。</p>
       </div>
     </main>
-        <ul class="pagination center">
-       <li class="waves-effect"><a ><i class="material-icons">chevron_left</i></a></li>
-       <li class="waves-effect"><a>1</a></li>
-       <li class="waves-effect"><a  href="/page/2/" ><i class="material-icons">chevron_right</i></a></li>
-     </ul>
+    <ul class="pagination">
+  <li class="waves-effect"><a ><i class="material-icons">chevron_left</i></a></li>
+  <li class="waves-effect"><a>1</a></li>
+  <li class="waves-effect"><a  href="/page/2/" ><i class="material-icons">chevron_right</i></a></li>
+</ul>
 
     <footer class="page-footer  pink lighten-3 z-depth-3">
      <div class="container">
