--- a/index.html
+++ b/index.html
@@ -133,12 +133,14 @@ crossorigin="anonymous"></script>
       <div class="col s0 l1"></div>
     </div>
     </main>
-        <ul class="pagination center">
-       <li class="waves-effect"><a ><i class="material-icons">chevron_left</i></a></li>
-       <li class="waves-effect"><a>1</a></li>
-       <li class="waves-effect"><a ><i class="material-icons">chevron_right</i></a></li>
-     </ul>
+    <div class="center">
+      <ul class="pagination">
+  <li class="waves-effect"><a ><i class="material-icons">chevron_left</i></a></li>
+  <li class="waves-effect"><a>1</a></li>
+  <li class="waves-effect"><a ><i class="material-icons">chevron_right</i></a></li>
+</ul>
 
+    </div>
     <footer class="page-footer  pink lighten-3 z-depth-3">
      <div class="container">
        <div class="row">
