--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 <html lang="jp">
 <head>
   <title>唐揚げとエンジニアリング</title>
+  <meta name="google-site-verification" content="rHyrYX3E2bxy_H947JaRPr6m8ITaETh0ESPEd6Lz_lc" />
   <meta content="唐揚げとエンジニアリング" name="title">
   <meta content="唐揚げ大好きエンジニアによるブログ" name="description">
   <meta content='eee_nbnb,blog,エンジニア,唐揚げ' name='keywords'>
